новый эндпоинт для всех ролей + документация
